--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   file_picker: ^8.1.4
-  flutter_blue_plus_windows: ^1.24.22
   desktop_drop: ^0.5.0
+  flutter_blue_plus_windows: ^1.24.22
+  bonsoir: ^5.1.10
+  riverpod: ^2.6.1
+  flutter_selectable_cards: ^0.0.2
+  share_plus: ^10.1.2
 
 dev_dependencies:
   flutter_test:
