--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -95,7 +95,7 @@ BEGIN
             VALUE "InternalName", "fileflick" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
             VALUE "OriginalFilename", "fileflick.exe" "\0"
-            VALUE "ProductName", "fileflick" "\0"
+            VALUE "ProductName", "FileFlick" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
